added full name, commited out map features

--- a/public/index.html
+++ b/public/index.html
@@ -91,12 +91,10 @@
 
 
                             <div class="col-md-9">
-                                <div class="spacer-double"></div>
+                                <!-- <div class="spacer-double"></div> -->
                                 <div class="spacer-single"></div>
 
-                        
-
-                                <h3 class="mb20">Hello</h3>
+                                <h3 class="mb20">Comfort Norteye</h3>
                                 <div class="h1_big">
                                   Software Engineer
                                     <!-- <div class="typed-strings">
@@ -435,8 +433,8 @@
     <script src="js/enquire.min.js"></script>
     <script src="js/jquery.stellar.min.js"></script>
     <script src="js/jquery.plugin.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?v=3&key=AIzaSyBOIFCvMQ1iEPFOeNIDAD5xjHwKBgGf8vk"></script>
-    <script src="js/map.js"></script>
+    <!-- <script src="https://maps.googleapis.com/maps/api/js?v=3&key=AIzaSyBOIFCvMQ1iEPFOeNIDAD5xjHwKBgGf8vk"></script>
+    <script src="js/map.js"></script> -->
     <script src="js/typed.js"></script>
     <script src="js/typed-custom.js"></script>
     <script src="js/designesia.js"></script>
