split each search into individual pages

--- a/public/contact.html
+++ b/public/contact.html
@@ -75,69 +75,43 @@
         <div id="content" class="no-bottom no-top">
             <div id="top"></div>
 
-            <!-- Home section begin -->
-            <section id="section-hero-no-bg" class="no-top no-bottom" data-bgcolor="#f6f6f6">
-                <div class="no-top no-bottom t30">
-                    <div class="container">
-                        <div class="row">
+            <!-- Contact section begin -->
+            <section id="section-contact-no-bg" data-stellar-background-ratio=".2">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-12 text-center">
+                            <!-- <h5><span class="id-color">Have Question?</span></h5> -->
+                            <h2>Contact Me Now</h2>
+                        </div>
+
+                        <div class="col-md-8 col-md-offset-3">
 
                             <div class="spacer-double"></div>
-                            <div class="spacer-double"></div>
 
-                            
-                            <div class="col-md-3">
-                                <img src="images/personal/IMG_5701.png" class="img-responsive" alt="">
+                            <div class="row text-center wow fadeInUp">
+                                <div class="col-md-4">
+                                    <div class="wm-1"></div>
+                                    <i class="icon_mobile id-color size40 mb20"></i>
+                                    <h6 class="id-color">Call Us</h6>
+                                    <h4>661-481-8643</h4>
+                                </div>
+
+                                <div class="col-md-4">
+
+                                    <div class="wm-1"></div>
+                                    <i class="icon_mail_alt id-color size40 mb20"></i>
+                                    <h6 class="id-color">Email Us</h6>
+                                    <h4>cnortye@gmail.com</h4>
+                                </div>
                             </div>
-
-
-                            <div class="col-md-9">
-                                <!-- <div class="spacer-double"></div> -->
-                                <div class="spacer-single"></div>
-
-                                <h3 class="mb20">Comfort Norteye</h3>
-                                <div class="h1_big">
-                                  Software Engineer
-                                    <!-- <div class="typed-strings">
-                                        <p>Software Engineer</p>
-                                        <p>Full Stack Developer</p>
-                                    </div> -->
-                                    <!-- <div class="typed"></div>
-
-                                </div> -->
-
-                                <div class="spacer-half"></div>
-                                <p class="lead">
-                                    Hello, I'm Comfort, a Software Engineer based in Arizona. 
-                                    I enjoy programming Ruby applications. 
-                                </p>
-                                <div class="spacer-half"></div>
-                                <a href="#section-portfolio" class="btn btn-custom color-2">See My Portfolio</a>
-                            </div>
-
                         </div>
                     </div>
                 </div>
-                <br>
             </section>
-            <!-- section close -->
 
         </div>
         <!-- content close -->
 
-        <!-- footer begin -->
-        <footer>
-            <div class="container text-center text-light">
-                <div class="row">
-                    <div class="col-md-12">
-                        <div class="social-icons big">
-                            <a href="#"><i class="fa fa-linkedin fa-lg"></i></a>
-                            <a href="#"><i class="fa fa-github fa-lg"></i></a>
-                            <!-- <a href="#"><i class="fa fa-rss fa-lg"></i></a>
-                            <a href="#"><i class="fa fa-google-plus fa-lg"></i></a> -->
-                        </div>
-                    </div>
-                </div>
-            </div>
 
             <div class="subfooter">
                 <div class="container text-center">
