--- a/public/resume.html
+++ b/public/resume.html
@@ -54,7 +54,7 @@
                         <!-- mainmenu begin -->
                         <nav>
                             <ul id="mainmenu">
-                                <li><a class="active" href="index.html">About Me<span></span></a></li>
+                                <li><a class="active" href="#top">About Me<span></span></a></li>
                                 <!-- <li><a href="#section-about">About Me<span></span></a></li> -->
                                 <!-- <li><a href="#section-services-no-bg">Services<span></span></a></li> -->
                                 <li><a href="project.html">Projects<span></span></a></li>
@@ -75,51 +75,47 @@
         <div id="content" class="no-bottom no-top">
             <div id="top"></div>
 
-            <!-- Home section begin -->
-            <section id="section-hero-no-bg" class="no-top no-bottom" data-bgcolor="#f6f6f6">
-                <div class="no-top no-bottom t30">
-                    <div class="container">
-                        <div class="row">
 
-                            <div class="spacer-double"></div>
-                            <div class="spacer-double"></div>
+            <!-- Resume section begin -->
+            <section id="section-experiences-no-bg" data-bgcolor="#f6f6f6">
+                <div class="container">
 
-                            
-                            <div class="col-md-3">
-                                <img src="images/personal/IMG_5701.png" class="img-responsive" alt="">
+                    <div class="row">
+                        <div class="col-md-8">
+                            <div class="padding20 wow fadeInRight">
+                                <h2>Experiences</h2>
+                                <div class="exp-box">
+                                    <h5><span class="id-color">2014 - now</span></h5>
+                                    <h3>HR Recruiting Coordinator</h3>
+                                    <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae.</p>
+                                </div>
+                                <div class="exp-box">
+                                    <h5><span class="id-color">2010 - 2014</span></h5>
+                                    <h3>Pending Software Engineering work</h3>
+                                    <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto.</p>
+                                </div>
                             </div>
-
-
-                            <div class="col-md-9">
-                                <!-- <div class="spacer-double"></div> -->
-                                <div class="spacer-single"></div>
-
-                                <h3 class="mb20">Comfort Norteye</h3>
-                                <div class="h1_big">
-                                  Software Engineer
-                                    <!-- <div class="typed-strings">
-                                        <p>Software Engineer</p>
-                                        <p>Full Stack Developer</p>
-                                    </div> -->
-                                    <!-- <div class="typed"></div>
-
-                                </div> -->
-
-                                <div class="spacer-half"></div>
-                                <p class="lead">
-                                    Hello, I'm Comfort, a Software Engineer based in Arizona. 
-                                    I enjoy programming Ruby applications. 
-                                </p>
-                                <div class="spacer-half"></div>
-                                <a href="#section-portfolio" class="btn btn-custom color-2">See My Portfolio</a>
-                            </div>
-
                         </div>
+                        <div class="col-md-4">
+                            <div class="padding20 wow fadeInRight" data-wow-delay=".25s">
+                                <h2>Education</h2>
+                                <div class="exp-box">
+                                    <h5><span class="id-color">2020</span></h5>
+                                    <h3>Full Stack Developer, Fasttrack Academy</h3>
+                                    <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium.</p>
+                                </div>
+                                <div class="exp-box">
+                                    <h5><span class="id-color">2018</span></h5>
+                                    <h3>Bachelors of science, Grand Canyon Uniersity</h3>
+                                    <p>Sed ut perspiciatis totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto.</p>
+                                </div>
+                            </div>
+                        </div>
+
                     </div>
                 </div>
-                <br>
             </section>
-            <!-- section close -->
+
 
         </div>
         <!-- content close -->
