--- a/public/project.html
+++ b/public/project.html
@@ -91,7 +91,7 @@
                                 <li><a href="#" data-filter=".react">React</a></li>
                                 <li><a href="#" data-filter=".javascript">JavaScript</a></li>
                                 <li><a href="#" data-filter=".photography">Ruby</a></li>
-                                <li><a href="#" data-filter=".data">Data Structures & Algorithms</a></li>
+                                <!-- <li><a href="#" data-filter=".data">Data Structures & Algorithms</a></li> -->
                             </ul>
 
 
