--- a/public/resume.html
+++ b/public/resume.html
@@ -30,7 +30,7 @@
 
 <body>
     <div>
-                <!-- header begin -->
+
                 <header class="header-light">
                     <div class="container">
                         <div class="row">
@@ -70,9 +70,9 @@
                <section id="section-experiences-no-bg" data-bgcolor="#f6f6f6">
                     <div class="container">
                         <div class="row">
-                            <div class="col-md-6">
+                            <!-- <div class="col-md-6">
                                 <h1>RESUME</h1>
-                            </div>
+                            </div> -->
                             <div class="col-md-6">
                                 <a target="_blank" href="https://drive.google.com/file/d/1cKdEydDlDTp4vfZCm9f5zvvRGPO2oLGw/view" class="btn btn-custom color-2">Download Resume</a>
                             </div>
@@ -81,42 +81,49 @@
                 <br>
                 <br>
                     <div class="container">
-                    <h2 class="text-center">Experiences</h2>
-                    <div class="exp-box">
-                    <h5><span class="id-color">2014 - now</span></h5>
-                    <h3>Fulltime Freelancer</h3>
-                    <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae.</p>
-                    </div>
-                    <div class="exp-box">
-                    <h5><span class="id-color">2006 - 2010</span></h5>
-                    <h3>Web Designer at Microsoft</h3>
-                    <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto.</p>
-                    </div>
-                    </div>
-                <br>
-                <br>
-                    <div class="container">
-                    <h2 class="text-center">Education</h2>
-                    <div class="exp-box">
-                    <h5><span class="id-color">2014</span></h5>
-                    <h3>Specialize App Design, Harvard University</h3>
-                    <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae.</p>
-                    </div>
-                    <div class="exp-box">
-                    <h5><span class="id-color">2010</span></h5>
-                    <h3>Master of Design, University of California</h3>
-                    <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto.</p>
-                    </div>
-                    </div>
-                    
-                <br>
-                <br>
-                    <div class="container">
-                        <h2 class="text-center">Technical skillsset</h2>
+                    <div class="row">
+                        <div class="col-md-6">
+                        <h2>Experiences</h2>
                         <div class="exp-box">
-                            <h5><span class="id-color">2014</span></h5>
-                            <h3>Specialize App Design, Harvard University</h3>
-                            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae.</p>
+                        <h5><span class="id-color">2020 - now</span></h5>
+                        <h3>Claims Adjuster</h3>
+                        <p>Responded in a timely manner to customer on assigned claims in a way that is consistent with corporate claims policies and procedures. </p>
+                        </div>
+                        <!-- <div class="exp-box">
+                        <h5><span class="id-color">2006 - 2010</span></h5>
+                        <h3>Web Designer at Microsoft</h3>
+                        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto.</p>
+                        </div> -->
+                        </div>
+                        <div class="col-md-6">
+                            <h2>Education</h2>
+                            <div class="exp-box">
+                            <h5><span class="id-color">2014 - 2018</span></h5>
+                            <h3>Bachelor of Science, Psychology</h3>
+                            <h4>Grand Canyon University</h3>
+                            <h5>Phoenix, AZ</h3>
+                            </div>
+                            </div>
+                    </div>
+                <br>
+                <br>
+                    <div class="container">
+                        <h2>Technical skillset</h2>
+                        <div class='row'>
+                            <div class="col-md-6">
+                        <ul>
+                            <li>Ruby</li>
+                            <li>Ruby on Rails</li>
+                            <li>JavaScript</li>
+                          </ul>
+                        </div>
+                        <div class="col-md-6">
+                            <ul>
+                                <li>React Js</li>
+                                <li>Git</li>
+                                <li>Heroku</li>
+                              </ul>
+                            </div>
                         </div>
                     </div>
             </section>
@@ -154,8 +161,8 @@
     <script src="js/enquire.min.js"></script>
     <script src="js/jquery.stellar.min.js"></script>
     <script src="js/jquery.plugin.js"></script>
-    <!-- <script src="https://maps.googleapis.com/maps/api/js?v=3&key=AIzaSyBOIFCvMQ1iEPFOeNIDAD5xjHwKBgGf8vk"></script>
-    <script src="js/map.js"></script> -->
+    <script src="https://maps.googleapis.com/maps/api/js?v=3&key=AIzaSyBOIFCvMQ1iEPFOeNIDAD5xjHwKBgGf8vk"></script>
+    <script src="js/map.js"></script>
     <script src="js/typed.js"></script>
     <script src="js/typed-custom.js"></script>
     <script src="js/designesia.js"></script>
