--- a/public/project.html
+++ b/public/project.html
@@ -90,7 +90,7 @@
                                 <li><a href="#" data-filter="*" class="selected">All Projects</a></li>
                                 <li><a href="#" data-filter=".react">React</a></li>
                                 <li><a href="#" data-filter=".javascript">JavaScript</a></li>
-                                <li><a href="#" data-filter=".photography">Ruby</a></li>
+                                <li><a href="#" data-filter=".ruby">Ruby</a></li>
                                 <!-- <li><a href="#" data-filter=".data">Data Structures & Algorithms</a></li> -->
                             </ul>
 
@@ -106,10 +106,9 @@
 											<span class="overlay">
 												<span class="pf_text">
                                                     <span class="project-name">Trello App</span>
-                                                    <p class="project-name">
-                                                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-                                                        Aliquam enim quaerat suscipit illum dolor ex nobis a adipisci, 
-                                                     </p>
+                                                    <!-- <p class="project-name">
+                                                        An app that allows you to organinz
+                                                     </p> -->
 												</span>
 											</span>
 											<img src="images/personal/trello.png" alt="" />
@@ -125,10 +124,10 @@
 											<span class="overlay">
 												<span class="pf_text">
                                                     <span class="project-name">Movie Series App</span>
-                                                    <p class="project-name">
+                                                    <!-- <p class="project-name">
                                                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
                                                        Aliquam enim quaerat suscipit illum dolor ex nobis a adipisci, 
-                                                    </p>
+                                                    </p> -->
 												</span>
 											</span>
 											<img src="images/personal/movieserie.png" alt="" />
@@ -138,16 +137,16 @@
                                 <!-- close gallery item -->
 
                                 <!-- E-commerce App -->
-                                <div class="item react gallery-item">
+                                <div class="item react javascript gallery-item">
                                     <div class="picframe wow">
                                         <a target="_blank" href="https://comfortlog.herokuapp.com/">
 											<span class="overlay">
 												<span class="pf_text">
                                                     <span class="project-name">E-commerce App</span>
-                                                    <p class="project-name">
+                                                    <!-- <p class="project-name">
                                                         Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
                                                         Aliquam enim quaerat suscipit illum dolor ex nobis a adipisci, 
-                                                     </p>
+                                                     </p> -->
 												</span>
 											</span>
 											<img src="images/personal/ecommerce.png" alt="" />
@@ -157,16 +156,16 @@
                                 <!-- close gallery item -->
 
                                 <!-- Job Board App -->
-                                <div class="item react illustration mobile gallery-item">
+                                <div class="item javascript illustration mobile gallery-item">
                                     <div class="picframe wow">
                                         <a target="_blank" href="https://comfortjobs.herokuapp.com/">
 											<span class="overlay">
 												<span class="pf_text">
                                                     <span class="project-name">Job Board App</span>
-                                                    <p class="project-name">
+                                                    <!-- <p class="project-name">
                                                         Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
                                                         Aliquam enim quaerat suscipit illum dolor ex nobis a adipisci, 
-                                                     </p>
+                                                     </p> -->
 												</span>
 											</span>
 											<img src="images/personal/jobboard-pp.png" alt="" />
@@ -182,10 +181,10 @@
 											<span class="overlay">
 												<span class="pf_text">
                                                     <span class="project-name">Movie Review App</span>
-                                                    <p class="project-name">
+                                                    <!-- <p class="project-name">
                                                         Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
                                                         Aliquam enim quaerat suscipit illum dolor ex nobis a adipisci, 
-                                                     </p>
+                                                     </p> -->
 												</span>
 											</span>
 											<img src="images/personal/movie-review.png" alt="" />
@@ -201,10 +200,10 @@
 											<span class="overlay">
 												<span class="pf_text">
                                                     <span class="project-name">Ideas App</span>
-                                                    <p class="project-name">
+                                                    <!-- <p class="project-name">
                                                         Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
                                                         Aliquam enim quaerat suscipit illum dolor ex nobis a adipisci, 
-                                                     </p>
+                                                     </p> -->
 												</span>
 											</span>
 											<img src="images/personal/ideas-app.PNG" alt="" />
@@ -214,16 +213,16 @@
                                 <!-- close gallery item -->
 
                                    <!-- Blog App -->
-                                   <div class="item ruby website gallery-item">
+                                   <div class="item javascript ruby website gallery-item">
                                     <div class="picframe wow">
                                         <a target="_blank" href="https://comfort-blog.herokuapp.com/">
 											<span class="overlay">
 												<span class="pf_text">
                                                     <span class="project-name">Blog App</span>
-                                                    <p class="project-name">
+                                                    <!-- <p class="project-name">
                                                         Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
                                                         Aliquam enim quaerat suscipit illum dolor ex nobis a adipisci, 
-                                                     </p>
+                                                     </p> -->
 												</span>
 											</span>
 											<img src="images/personal/blog.png" alt="" />
