--- a/public/resume.html
+++ b/public/resume.html
@@ -107,7 +107,7 @@
                     </div>
                 <br>
                 <br>
-                    <div class="container">
+                    <!-- <div class="container">
                         <h2>Technical skillset</h2>
                         <div class='row'>
                             <div class="col-md-6">
@@ -125,7 +125,7 @@
                               </ul>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
             </section>
             <!-- section close -->
 
